# tpogden.github.com

./: .gitignore  .nojekyll  404.html  CLAUDE.html  CLAUDE.md  CNAME  README.md  _brand.yml  _config.yml  _metadata.yml  _quarto.yml  about.md  atom.xml  environment.yml  index.html  index.md  index.qmd  index_old.html  listings.json  projects.md  pyproject.toml  robots.txt  search.json  sitemap.xml  tpogden.scss
.devcontainer/: Dockerfile  devcontainer.json  post_attach.sh  post_create.sh
10000-days/: index.html
_drafts/: 2009-04-11-pennine-way.md  2012.txt  2014-01-16-utah.html  2014-09-06-math-in-markdown-test.md  2014-12-31-2014.md  2015-10-29-brooklyn.html  2015-12-31-2015.md  2016-03-31-jaunary-to-march-2016.md  2017-11-25-testing.md  ab-method-1.md  ab-method.md  april-to-june-2017.md  book-notes-2020.md  how-to-make-light-go-faster-than-light.md  its-not-all-greek.txt  january-to-march-2017.md  moldy-argon-1-introduction.md  moldy-argon-2-atoms-in-motion.md  october-to-december-2016.md  open-city-by-teju-cole.md  random-walks.html  simultons.md  sparse.md
_includes/: dash.html  footer.html  head.html  header.html  header_about.html  header_home.html  header_no-nav.html  header_notes.html  header_photos.html  header_projects.html  links.html  mail_dinorwic.html  mail_ogden_eu.html  rating_1.html  rating_2.html  rating_3.html  rating_4.html  rating_5.html  reread.html  scripts.html  send-comments.html  sidebox_pw.html  star.html  svg_logo.html
_layouts/: about.html  home.html  no-nav.html  note.html  notes.html  page.html  photo.html  photos.html  project.html  (+1 more)
(+421 files in other folders)
