[project]
name = "tpogden-quarto"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
    "nbconvert>=7.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
exclude = ["_posts/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
